fix(prod): resolve 500 error, add .dockerignore, update deployment docs

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,4 +16,6 @@ RUN npm run build
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+# Run migrations before starting the app
+CMD ["sh", "-c", "npx prisma migrate deploy && npm start"]
+
