--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write ."
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "bcryptjs": "^2.4.3",
