--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,10 +1,19 @@
 server {
     listen 80;
-    
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Static assets (JS, CSS, Images with hash) - Cache for 1 year
+    location /assets/ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
+    # Everything else (Index.html, routes) - Do NOT cache
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
     }
 
     # Proxy API requests to backend
